miniextendr-macros/tests/ui/derive_dataframe_union.stderr
error: DataFrameRow does not support unions
 --> tests/ui/derive_dataframe_union.rs:6:7
  |
6 | union Bad {
  |       ^^^
